--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -5,4 +5,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+	<ItemGroup>
+		<Resource Include="Images\Locations\MatchaGreenOffice.png" />
+		<Resource Include="Images\Locations\FondueLake.png" />
+		<Resource Include="Images\Locations\BambooCookieForest.png" />
+		<Resource Include="Images\Locations\WhiteChocolateHeaven.png" />
+		<Resource Include="Images\Locations\WhiteChocolateMochaFalls.png" />
+		<Resource Include="Images\Locations\VanillaIceCity.png" />
+		<Resource Include="Images\Locations\TropicalCheeseBeach.png" />
+		<Resource Include="Images\Locations\CinnamonCoralOcean.png" />
+		<Resource Include="Images\Locations\ChocoLavaIsland.png" />
+	</ItemGroup>
 </Project>
