--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -6,7 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\Locations\CrinkleDessert.png" />
+    <None Remove="Images\Locations\home.png" />
+  </ItemGroup>
+
 	<ItemGroup>
+		<Resource Include="Images\Locations\CrinkleDessert.png" />
+		<Resource Include="Images\Locations\home.png" />
 		<Resource Include="Images\Locations\MatchaGreenOffice.png" />
 		<Resource Include="Images\Locations\FondueLake.png" />
 		<Resource Include="Images\Locations\BambooCookieForest.png" />
