--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -46,4 +46,8 @@
 	<Resource Include="Images\Locations\CinnamonCoralOcean.png" />
 	<Resource Include="Images\Locations\ChocoLavaIsland.png" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\Monsters\" />
+  </ItemGroup>
 </Project>
